# OMSysIdent

./: .gitignore  CMakeLists.txt  Makefile  README.MD  configWinVS.bat
config.cmake/: FindOMSimulatorLibrary.cmake
docs/: Doxyfile.in
docs/UsersGuide/: Makefile
docs/UsersGuide/source/: OMSysIdent.rst  conf.py  index.rst  introduction.rst
docs/UsersGuide/source/api/: omsi_addInput.rst  omsi_addMeasurement.rst  omsi_addParameter.rst  omsi_describe.rst  omsi_freeSysIdentModel.rst  omsi_getParameter.rst  omsi_getState.rst  omsi_initialize.rst  omsi_newSysIdentModel.rst  omsi_setOptions_max_num_iterations.rst  omsi_solve.rst
docs/images/: origins.txt
src/: CMakeLists.txt  FitModel.cpp  OMSysIdent.cpp
src/OMSimulatorPython/: OMSysIdent.py
tests/: CMakeLists.txt  Makefile  rtest
tests/python/: README.md  runCTests.py
tests/resources/: Makefile
testsuite/: CMakeLists.txt  rtest  test_HelloWorld_cs_Fit.c  test_Lin2DimODE_cs_Fit.cpp
testsuite/python/: HelloWorldWithInput_cs_Fit.lua  HelloWorldWithInput_cs_Fit.py  Makefile
testsuite/resources/: HelloWorld.fmu  HelloWorldWithInput.fmu  Lin2DimODE.fmu
